# postgres-explorer

./: .dockerignore  .env.example  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md  docker-build.sh  docker-compose.yml
dev/postgres/: init.sql
migrations/: 001_init.sql  002_add_password_encrypted.sql  003_add_ssl_and_search_path.sql  004_add_enable_blueprint.sql  005_add_query_history.sql
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/handlers/: blueprint.rs  console.rs  dashboard.rs  databases.rs  endpoints.rs  export.rs  health.rs  indices.rs  maintenance.rs  mod.rs  patroni.rs  schemas.rs  table_detail.rs  tables.rs  tuning.rs
src/templates/: base.html  blueprint_wizard.html  console.html  dashboard.html  databases.html  endpoints.html  endpoints_list.html  export_wizard.html  import_wizard.html  indices.html  indices_table.html  layout.html  mod.rs  patroni.html  schemas.html  schemas_table.html  table_data.html  table_detail.html  table_modal.html  tables.html  tables.html.bak  tables_table.html  tuning.html
src/templates/partials/: no_authorized.html
src/utils/: browser.rs  filter.rs  format.rs  mod.rs
static/: endpoints.js  import_wizard.js
